# noire-suite

./: .gitignore  README.md
.github/workflows/: ci.yml
src/: CMakeLists.txt
src/core/: CMakeLists.txt  Common.h  Hash.cpp  Hash.h  Path.cpp  Path.h  VFS.cpp  VFS.h
src/core/devices/: Device.h  LocalDevice.cpp  LocalDevice.h  MultiDevice.cpp  MultiDevice.h
src/core/files/: AttributeFile.cpp  AttributeFile.h  Container.cpp  Container.h  File.cpp  File.h  RawFile.cpp  RawFile.h  Trunk.cpp  Trunk.h  WAD.cpp  WAD.h
src/core/files/atb/: Definition.cpp  Definition.h  Reader.cpp  Reader.h  Types.cpp  Types.h  Writer.cpp  Writer.h  XmlReader.cpp  XmlReader.h
src/core/files/trunk/: Graphics.cpp  Graphics.h  Section.cpp  Section.h  UniqueTexture.cpp  UniqueTexture.h  VertexDeclaration.cpp  VertexDeclaration.h
src/core/streams/: BufferedStream.cpp  BufferedStream.h  FileStream.cpp  FileStream.h  MemoryStream.cpp  MemoryStream.h  Stream.cpp  Stream.h  TempStream.cpp  TempStream.h
src/file-explorer/: App.cpp  App.h  CMakeLists.txt  DirectoryContentsListCtrl.cpp  DirectoryContentsListCtrl.h  DirectoryTreeCtrl.cpp  DirectoryTreeCtrl.h  FileTreeCtrl.cpp  FileTreeCtrl.h  Identifiers.h  Images.cpp  Images.h  MainWindow.cpp  MainWindow.h
src/file-explorer/controls/: DirectoryContentsListCtrl.cpp  DirectoryContentsListCtrl.h  DirectoryTreeCtrl.cpp  DirectoryTreeCtrl.h  ImagePanel.cpp  ImagePanel.h  PathToolBar.cpp  PathToolBar.h  StatusBar.cpp  StatusBar.h
src/file-explorer/rendering/: Camera.cpp  Camera.h  Math.h  Renderer.cpp  Renderer.h  SimpleMath.cpp  SimpleMath.h
src/file-explorer/resources/: BlankFileIcon.xpm  BlueFolderIcon.xpm  FolderIcon.xpm  NoireIcon.xpm  README.md
src/file-explorer/util/: DirectoryHistory.cpp  DirectoryHistory.h  Format.cpp  Format.h  VirtualFileDataObject.cpp  VirtualFileDataObject.h
src/file-explorer/windows/: AttributeWindow.cpp  AttributeWindow.h  HashLookupWindow.cpp  HashLookupWindow.h  ImageWindow.cpp  ImageWindow.h  MainWindow.cpp  MainWindow.h  ShaderProgramWindow.cpp  ShaderProgramWindow.h  TrunkWindow.cpp  TrunkWindow.h
src/formats/: AttributeFile.cpp  AttributeFile.h  CMakeLists.txt  ContainerFile.cpp  ContainerFile.h  File.h  Hash.cpp  Hash.h  ShaderProgramFile.cpp  ShaderProgramFile.h  ShaderProgramsFile.cpp  ShaderProgramsFile.h  TrunkFile.cpp  TrunkFile.h  WADFile.cpp  WADFile.h
src/formats/fs/: ContainerDevice.cpp  ContainerDevice.h  Device.cpp  Device.h  FileStream.cpp  FileStream.h  FileSystem.cpp  FileSystem.h  NativeDevice.cpp  NativeDevice.h  Path.cpp  Path.h  ShaderProgramsDevice.cpp  ShaderProgramsDevice.h  TrunkDevice.cpp  TrunkDevice.h  WADDevice.cpp  WADDevice.h
src/hash-collider/: CMakeLists.txt  crc.cu  crc.cuh  main.cu
src/hook/: CMakeLists.txt  main.cpp
tools/: run-cmake.bat
